--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -11,6 +11,7 @@
     "../projects/**/*.spec.ts"
   ],
   "include": [
+    "../**/*.stories.ts",
     "../stories/**/*",
     "../src/**/*",
     "../projects/**/*"
