--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "latest-version": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "uswds": "^2.13.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
